Fixed wonky spacing on the side

--- a/sass/grid.scss
+++ b/sass/grid.scss
@@ -7,7 +7,7 @@
   margin-left: -15px;
 }
 
-.intro .row {
+.intro .row, .article.row {
   margin-right: 0;
 }
 
